Added renderStartScreen and renderQuestionScreen functions

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script></script>
+    
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Document</title>
+    <title>Code Quiz</title>
 </head>
 <body>
     <!-- Top header link to high scores and time remaining -->
@@ -17,15 +17,10 @@
         </ul>
     </header>
     <main>
-        <h1 id="title">Title</h1>
-        <h2 id="question">Question</h2>
-        <section>
-            <button>Question 1</button>
-            <button>Question 2</button>
-            <button>Question 3</button>
-            <h3 id="message">Message</h3>
-        </section>
+        <section id="title-section"></section>
+        <section id="content"></section>
+        <section id="feedback"></section>
     </main>
-
 </body>
+<script src="assets/js/script.js"></script>
 </html>
