Moved addEventListeners out of functions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <ul>
             <li><a id="high-scores" href="#">High Scores</a></li>
-            <li>Time: <span id="time-left"></span></li>
+            <li>Time: <span id="time-left">60</span></li>
         </ul>
     </header>
     <main>
