--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Code Quiz</title>
 </head>
@@ -12,7 +11,7 @@
     <!-- Top header link to high scores and time remaining -->
     <header>
         <ul>
-            <li><a id="high-scores" href="#">High Scores</a></li>
+            <li><a id="high-scores" href="#">View High Scores</a></li>
             <li>Time: <span id="time-left">60</span></li>
         </ul>
     </header>
